	* tqueue.*, objs/animate.*: Fixed leak when loading game while an object is
	  playing SFX through Object_sfx; using time queue for it as it has the only
	  reference to the object.
	* gumps/AudioOptions_gump.cc: Memory leak on two buttons when enabling or
	  disabling audio.
	* gumps/VideoOptions_gump.cc: Double delete: set static variables to zero
	  after freeing them.

2012-12-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Changelog: Previous two entries (what was wrong with me?).
	* configure.ac: Enabling NxBR scalers by default, as they seem stable enough.
	* schedule.cc, actions.*: Eliminating warnings.
	* files/Flex.h, files/IFF.h, files/Table.h: Cosmetic: explicitly adding in
	  the virtual destructors, just in case.
	* exult.cc, exultmenu.cc, gamemap.cc, files/U7fileman.h: Enhancing Valgrind's
	  signal-to-noise ratio, eliminating some warnings.
	* shapes/vgafile.*: Avoid unnecessary data copying by using references.
	Part 2: Leaks galore
	* exultmenu.cc, menulist.*: Fixing memory leaks in menu.
	* game.cc, shapes/miscinf.cc: Implemented Shapeinfo_lookup::reset. Game::~Game
	  now frees all files and miscellaneous information (fixes lots of errors and
	  memory leaks). Fixed two dumb leaks (passing strdup'ed text to std::string
	  constructor).
	* gamemap.*: Game_map::clear could be reached before Game_map::init in some
	  cases, which led to some deletes of uninitialized stuff.
	* gamewin.cc: save_names array could be deleted uninitialized.
	* shapes/vgafile.*, shapeid.cc: Shape imports are now cleared for gumps and
	  main shapes. Fixed leaks in Shape_frame (construct new, call either read
	  or get_rle_shape).
	* shapes/font.cc: Multiple loads caused memory leaks.
	* shapes/items.cc: Alternating games caused memory leaks due to overwriting
	  text pointers without freeing them first.
	* All others: Straight up alloc-never-free leaks.
	Part 3: Yet more leaks.
	* actors.*, objs/objclient.*: Object_client needs a virtual destructor.