@@ -8,6 +8,10 @@
 	  disabling audio.
 	* gumps/VideoOptions_gump.cc: Double delete: set static variables to zero
 	  after freeing them.
+	* usecode/conversation.cc: Fixed bug #3001914: "Cutted texts in voiceovers
+	  with Speech disabled" [sic].
+	* exult.cc, imagewin/imagewin.cc: Missing space in video debug output. Fixed
+	  "fill" and "fit" fill modes (and aspect correction) when scale is 1.
 
 2012-12-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Changelog: Previous two entries (what was wrong with me?).
